changed size of title, took out a div, added a style

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,7 @@
 
 body{
-  /*background-color: #DECADE*/
-  background-color: #F2F6D0
+  
+  background-color: #2edbcd;
 }
 #wrapper{
   width:960px;
